--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/?maxPoolSize=100
+spring.data.mongodb.uri=mongodb://ec2-54-68-149-246.us-west-2.compute.amazonaws.com:27017/?maxPoolSize=100
 spring.data.mongodb.database=AlbumStore
