--- a/springboot-kafka/src/main/resources/application.properties
+++ b/springboot-kafka/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.acks=0
+spring.kafka.producer.retries=5
 
-spring.data.mongodb.uri=mongodb://ec2-35-91-205-123.us-west-2.compute.amazonaws.com:27017/?maxPoolSize=100
+spring.data.mongodb.uri=mongodb://ec2-54-68-149-246.us-west-2.compute.amazonaws.com:27017/?maxPoolSize=100
 spring.data.mongodb.database=AlbumStore
